# LLM_evalkit

./: .env.example  .gitignore  README.md  pyproject.toml
evalkit/: __init__.py  config.py
evalkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
evalkit/cli/: __init__.py  main.py
evalkit/core/: __init__.py  cache.py  db.py  runner.py
evalkit/datasets/: __init__.py  download_datasets.py  truthfulqa.py
evalkit/metrics/: __init__.py  basic.py
